# mqtt_soa_api

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: mqttsoaConfig.cmake
examples/: CMakeLists.txt  client.cpp  server.cpp
inc/: common.hpp  event_bus.hpp  mqtt_connector.hpp  result.hpp  topic_manager.hpp
include/: common.hpp  message.hpp  mqtt_connector.hpp  mqtt_events.hpp  service.hpp  sync_service.hpp  topic_manager.hpp
src/: CMakeLists.txt  main.cpp  mqtt_connector.cpp  topic_manager.cpp
test/: CMakeLists.txt  eventbus_test.cpp  option_test.cpp  result_tests.cpp  topicmanager_test.cpp
